--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -2101,7 +2101,19 @@ transform: scale(1.3);
 
 
 
+::-webkit-scrollbar {
+  height: 5px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background-color:rgba(240, 248, 255, 0);
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff37; 
+  border-radius: 10px;   
+}
 
 
 
